feat: adicionada a rota de listagem de gêneros
